2008-08-03 Harri Pitkänen <hatapitk@iki.fi>

	* Bug fixing.
	* Add check for duplicated words.

2008-08-02 Harri Pitkänen <hatapitk@iki.fi>

	* Ignore option VOIKKO_OPT_IGNORE_DOT in sentence
	  splitting and grammar checking, but document its effects
	  on string tokenizer.
	* Various small bug fixes.

2008-07-27 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for suggestions from grammar checker.

2008-07-26 Harri Pitkänen <hatapitk@iki.fi>

	* Add character case checks to grammar checker.

2008-07-16 Harri Pitkänen <hatapitk@iki.fi>

	* More punctuation checks to grammar checker.

2008-07-08 Harri Pitkänen <hatapitk@iki.fi>

	* Change grammar checker API to allow more than one
	  grammar error with the same start position.
	* New grammar checker test for space before punctuation.

2008-07-03 Harri Pitkänen <hatapitk@iki.fi>

	* Work on grammar checker.
	* Add whitespace error checks.

2008-07-02 Harri Pitkänen <hatapitk@iki.fi>

	* Work on grammar checker.
	* Increase library version number to 2.0.
	* Update README.

2008-07-01 Harri Pitkänen <hatapitk@iki.fi>

	* Split and update manual pages.
	* Add single paragraph grammar checker cache.

2008-06-29 Harri Pitkänen <hatapitk@iki.fi>

	* Move grammar checking related functionality from
	  voikkohyphenate to a new test tool voikkogc.

2008-06-28 Harri Pitkänen <hatapitk@iki.fi>

	* Add API for grammar checking.

2008-06-08 Harri Pitkänen <hatapitk@iki.fi>

	* Work on sentence splitting.
	* Allow strings longer than LIBVOIKKO_MAX_WORD_CHARS to
	  be converted with voikko_cstrtoucs4.

2008-06-07 Harri Pitkänen <hatapitk@iki.fi>

	* Work on sentence splitting.

2008-06-04 Harri Pitkänen <hatapitk@iki.fi>

	* Work on sentence splitting.
	* Increase version numbers for version 1.8.

2008-05-26 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>

	* Provide libvoikko.pc for pkg-config.

2008-03-07 Harri Pitkänen <hatapitk@iki.fi>

	* Fix hyphenation of nougat'kaan.

2008-01-29 Harri Pitkänen <hatapitk@iki.fi>
