@@ -5,3 +5,4 @@ Varo vähän! Oletko hullu? Arvasin.
 Juhliin saapuu mm. Martta ja Reijo.
 Perjantai 13. päivä on ensi viikolla.
 Hänen Lappeen kihlakunnan mies oli paitsi komea myös muotitietoinen, sillä miehet liikkuivat työasioissa alueella. Viipuri ja Pietari olivat rahtimiehille tuttuja, lännen suunnalla Tallinnaan, Turkuun ja kauemmaksikin ja saivat vaikutteita pukeutumiseensa.
+Tähän liittyy kaksi virkettä: Ensimmäinen virke on tässä. Toinen on tässä.
